fix wrapping text

--- a/src/component/serviceContentView/ServiceContent.css
+++ b/src/component/serviceContentView/ServiceContent.css
@@ -19,7 +19,7 @@
     top:-8%;
     border-radius: 10px;
     text-align: center;
-    box-shadow: 1px 1px 25px rgba(0, 0, 0, 0.09);
+   
 }
 
 .content-text h3 {
@@ -29,6 +29,12 @@
 .title-content {
     font-size: 24px;
     font-weight: 700;
+    padding-top: 70px;
+}
+
+.wrapper-content-text {
+    width: 80%;
+    text-align: center;
 }
 
 .content {
